{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 96,
  "lineage": "e896ab51-48da-0a38-e357-e31504c48a0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:loadbalancer/app/ml-video-platform-demo-alb/b4c2191b2253f5aa",
            "arn_suffix": "app/ml-video-platform-demo-alb/b4c2191b2253f5aa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ml-video-platform-demo-alb-2114256506.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:390669617932:loadbalancer/app/ml-video-platform-demo-alb/b4c2191b2253f5aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ml-video-platform-demo-alb",
            "preserve_host_header": true,
            "region": "us-west-2",
            "security_groups": [
              "sg-069ae1748ea09c25d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012f72b5e950217a4"
              },
              {
                "subnet_id": "subnet-0778d2384e3203ee8"
              },
              {
                "subnet_id": "subnet-07a7843dea811b99c"
              }
            ],
            "subnets": [
              "subnet-012f72b5e950217a4",
              "subnet-0778d2384e3203ee8",
              "subnet-07a7843dea811b99c"
            ],
            "tags": {
              "Name": "ml-video-platform-demo-alb",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-alb",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:listener/app/ml-video-platform-demo-alb/b4c2191b2253f5aa/4be853f645c49a1b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:390669617932:listener/app/ml-video-platform-demo-alb/b4c2191b2253f5aa/4be853f645c49a1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:loadbalancer/app/ml-video-platform-demo-alb/b4c2191b2253f5aa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:listener/app/ml-video-platform-demo-alb/b4c2191b2253f5aa/0f5fafa5ca3b34b8",
            "certificate_arn": "arn:aws:acm:us-west-2:390669617932:certificate/0519e986-ee4b-45fd-a29d-8ab01291e972",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:targetgroup/ml-video-platform-demo-api-tg/742a7fdddcb16cc1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:390669617932:listener/app/ml-video-platform-demo-alb/b4c2191b2253f5aa/0f5fafa5ca3b34b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:loadbalancer/app/ml-video-platform-demo-alb/b4c2191b2253f5aa",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert",
            "aws_lb.lb",
            "aws_lb_target_group.api",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb",
            "data.aws_route53_zone.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:390669617932:targetgroup/ml-video-platform-demo-api-tg/742a7fdddcb16cc1",
            "arn_suffix": "targetgroup/ml-video-platform-demo-api-tg/742a7fdddcb16cc1",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:390669617932:targetgroup/ml-video-platform-demo-api-tg/742a7fdddcb16cc1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "least_outstanding_requests",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ml-video-platform-demo-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ml-video-platform-demo-api-tg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-api-tg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-069ae1748ea09c25d",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069ae1748ea09c25d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ml-video-platform-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-video-platform-demo-alb-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-alb-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-048edd3630597ff61",
            "description": "Security group for API ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048edd3630597ff61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069ae1748ea09c25d"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ml-video-platform-demo-api-sg",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-video-platform-demo-api-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-api-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-01d9ac2800a7d14a0",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-01d9ac2800a7d14a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020d644d0e64b88e1",
                  "sg-048edd3630597ff61"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ml-video-platform-demo-rds-sg",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-video-platform-demo-rds-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-rds-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_security_group.worker",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-0e135ab999d6dbde2",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e135ab999d6dbde2",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.0.0/24"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from API tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048edd3630597ff61"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS from Worker tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020d644d0e64b88e1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ml-video-platform-demo-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-video-platform-demo-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_security_group.worker",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-020d644d0e64b88e1",
            "description": "Security group for ECS worker tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020d644d0e64b88e1",
            "ingress": [],
            "name": "ml-video-platform-demo-worker-sg",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ml-video-platform-demo-worker-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-worker-sg",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:vpc-endpoint/vpce-03b038692a383e2d6",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03b038692a383e2d6",
            "ip_address_type": "ipv4",
            "owner_id": "390669617932",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "region": "us-west-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0910f9171d6d3b596"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "ml-video-platform-demo-s3-endpoint"
            },
            "tags_all": {
              "Name": "ml-video-platform-demo-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:network-acl/acl-07749e4ef56949058",
            "default_network_acl_id": "acl-07749e4ef56949058",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07749e4ef56949058",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "390669617932",
            "region": "us-west-2",
            "subnet_ids": [
              "subnet-0778d2384e3203ee8",
              "subnet-0cadbe5987028a826"
            ],
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:route-table/rtb-03e06c262225a116a",
            "default_route_table_id": "rtb-03e06c262225a116a",
            "id": "rtb-03e06c262225a116a",
            "owner_id": "390669617932",
            "propagating_vgws": null,
            "region": "us-west-2",
            "route": [],
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:security-group/sg-00fb43788d34a020a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00fb43788d34a020a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e04825b69688a50b",
            "arn": "arn:aws:ec2:us-west-2:390669617932:elastic-ip/eipalloc-0e04825b69688a50b",
            "domain": "vpc",
            "id": "eipalloc-0e04825b69688a50b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-227-29-104.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.29.104",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:internet-gateway/igw-08c2274cbe0b05862",
            "id": "igw-08c2274cbe0b05862",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e04825b69688a50b",
            "association_id": "eipassoc-032e34254315e80d2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0cd24e0d843c0e4d3",
            "network_interface_id": "eni-0483da5153034803e",
            "private_ip": "172.30.0.124",
            "public_ip": "44.227.29.104",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0778d2384e3203ee8",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0910f9171d6d3b5961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd24e0d843c0e4d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0910f9171d6d3b596",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08c2274cbe0b05862",
            "id": "r-rtb-0ef002defc14fba4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef002defc14fba4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:route-table/rtb-0910f9171d6d3b596",
            "id": "rtb-0910f9171d6d3b596",
            "owner_id": "390669617932",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:route-table/rtb-0ef002defc14fba4c",
            "id": "rtb-0ef002defc14fba4c",
            "owner_id": "390669617932",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0762d5e522b415220",
            "region": "us-west-2",
            "route_table_id": "rtb-0910f9171d6d3b596",
            "subnet_id": "subnet-0719b31b61e024ea8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08670579560cd56f6",
            "region": "us-west-2",
            "route_table_id": "rtb-0910f9171d6d3b596",
            "subnet_id": "subnet-0cadbe5987028a826"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f6f9777580926cc",
            "region": "us-west-2",
            "route_table_id": "rtb-0910f9171d6d3b596",
            "subnet_id": "subnet-04d50fce03db75d47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ccec6b15af4aed9",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef002defc14fba4c",
            "subnet_id": "subnet-0778d2384e3203ee8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca6314d449ae3ff6",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef002defc14fba4c",
            "subnet_id": "subnet-07a7843dea811b99c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0603cea690f53a6f3",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef002defc14fba4c",
            "subnet_id": "subnet-012f72b5e950217a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-0719b31b61e024ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.30.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0719b31b61e024ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-0cadbe5987028a826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.30.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cadbe5987028a826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-04d50fce03db75d47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.30.0.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d50fce03db75d47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-0778d2384e3203ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.30.0.96/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0778d2384e3203ee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-07a7843dea811b99c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.30.0.128/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a7843dea811b99c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:subnet/subnet-012f72b5e950217a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.30.0.160/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012f72b5e950217a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390669617932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "vpc_id": "vpc-0a37c30f2857b5b7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:390669617932:vpc/vpc-0a37c30f2857b5b7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/24",
            "default_network_acl_id": "acl-07749e4ef56949058",
            "default_route_table_id": "rtb-03e06c262225a116a",
            "default_security_group_id": "sg-00fb43788d34a020a",
            "dhcp_options_id": "dopt-02d91c7ffdde0ac55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a37c30f2857b5b7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e06c262225a116a",
            "owner_id": "390669617932",
            "region": "us-west-2",
            "tags": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            },
            "tags_all": {
              "CIDR": "172.30.0.0/24",
              "Name": "ml-video-platform-demo-vpc",
              "environment": "demo",
              "git": "https://www.github.com/syedalijabir/ml-video-platform",
              "managed-by": "terraform",
              "owner": "syedalijabir",
              "system": "ml-video-platform",
              "system-key": "ml-video-platform-demo"
            }
          }
        }
      ]
    }
  ]
}